apps/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: audiobookshelf
  ports:
    - port: 80
      targetPort: 80
