apps/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: abs.webernet.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
